rust_compiler/libs/integration_tests/src/snapshots/integration_tests__optimization_tests__algebraic_simplification.snap
---
source: libs/integration_tests/src/optimization_tests.rs
expression: output
---
## Unoptimized Output

j main
main:
move r1 5
mul r1 r1 1
move r1 r1

## Optimized Output

move r1 5
