rust_compiler/libs/integration_tests/src/snapshots/integration_tests__optimization_tests__complex_arithmetic.snap
---
source: libs/integration_tests/src/optimization_tests.rs
expression: output
---
## Unoptimized Output

j main
compute:
pop r8
pop r9
pop r10
push sp
push ra
mul r3 r10 2
add r1 r9 0
mul r2 r8 1
add r1 r3 r1
add r1 r1 r2
move r15 r1
j __internal_L1
__internal_L1:
pop ra
pop sp
j ra
main:

## Optimized Output

j 10
pop r8
pop r9
pop r10
add r3 r10 r10
move r1 r9
move r2 r8
add r1 r3 r1
add r15 r1 r2
j ra
