rust_compiler/libs/integration_tests/src/snapshots/integration_tests__optimization_tests__constant_folding.snap
---
source: libs/integration_tests/src/optimization_tests.rs
expression: output
---
## Unoptimized Output

j main
main:
move r1 15

## Optimized Output

move r1 15
