rust_compiler/libs/integration_tests/src/snapshots/integration_tests__optimization_tests__min_assignment_register_forwarding_in_loop.snap
---
source: libs/integration_tests/src/optimization_tests.rs
expression: output
---
## Unoptimized Output

j main
main:
move r1 0
__internal_L1:
min r1 500 400
j __internal_L1
__internal_L2:

## Optimized Output

move r1 0
min r1 500 400
j 1
