rust_compiler/libs/integration_tests/src/snapshots/integration_tests__optimization_tests__select_optimization.snap
---
source: libs/integration_tests/src/optimization_tests.rs
expression: output
---
## Unoptimized Output

j main
ternary:
pop r8
push sp
push ra
move r1 0
beqz r8 __internal_L3
move r1 10
j __internal_L2
__internal_L3:
move r1 20
__internal_L2:
move r15 r1
j __internal_L1
__internal_L1:
pop ra
pop sp
j ra
main:

## Optimized Output

j 4
pop r8
select r15 r8 10 20
j ra
