rust_compiler/libs/integration_tests/src/snapshots/integration_tests__optimization_tests__strength_reduction.snap
---
source: libs/integration_tests/src/optimization_tests.rs
expression: output
---
## Unoptimized Output

j main
double:
pop r8
push sp
push ra
mul r1 r8 2
move r15 r1
j __internal_L1
__internal_L1:
pop ra
pop sp
j ra
main:

## Optimized Output

j 8
pop r8
push sp
push ra
add r15 r8 r8
pop ra
pop sp
j ra
