rust_compiler/libs/integration_tests/src/snapshots/integration_tests__optimization_tests__syscall_binary_expression_register_forwarding.snap
---
source: libs/integration_tests/src/optimization_tests.rs
expression: output
---
## Unoptimized Output

j main
main:
ls r2 d0 0 Quantity
ls r1 d0 1 Quantity
add r1 r2 r1

## Optimized Output

ls r2 d0 0 Quantity
ls r1 d0 1 Quantity
add r1 r2 r1
